--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -1,30 +1,45 @@
 body { 
-        background-image: url('/static/images/bg-coming.png');
-        background-repeat: repeat;
+    background-image: url('/static/images/bg-coming.png');
+    background-repeat: repeat;
+}
+     
+#content {
+    text-align:center;
+    color: #cceedd;
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    margin:auto;
+    height:240px;
+    width:70%;
+    font-family: 'DejaVu Sans', sans-serif;
+}
+        
+#content h3 {
+    font-size: 40px;
+    text-shadow: 1px 4px 10px black;
+}
+#content h3:hover {
+    cursor: pointer;
 }
 
-#content {
-        text-align:center;
-        color: #cceedd;
-        position:absolute; 
-        top:0; 
-        bottom:0; 
-        left:0; 
-        right:0;
-        margin:auto; 
-        height:240px; 
-        width:70%;
-        font-family: 'DejaVu Sans', sans-serif;
+          
+#content h3 b {
+    opacity: 1;
+    transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -webkit-transition: opacity .25s ease-in-out;
 }
-            
-#content h3 {
-        font-size: 40px;
-        text-shadow: 1px 4px 10px black;
+#content h3 b:hover {
+    opacity: 0.7;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 1.0) !important;
 }
-           
+
 #content p {
-        color: #efefef;
-        text-shadow: 0 1px 0 rgba(0, 0, 0, 0.7);
-        margin-top: -20px;
-        font-size: 12px; 
+    color: #efefef;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.7);
+    margin-top: -20px;
+    font-size: 12px;
 }
